fix new code block scrollbar style
After building the project and testing the build, the new scrollbar styles where not being displayed (overwritten by docosaurus styles), this fixes the issue.

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -336,15 +336,15 @@
     width: 100px !important;
   }
 
-  .prism-code::-webkit-scrollbar-track {
+  pre.prism-code::-webkit-scrollbar-track {
     background: rgba(255, 255, 255, 0.1);
   }
 
-  .prism-code::-webkit-scrollbar-thumb {
+  pre.prism-code::-webkit-scrollbar-thumb {
     background: rgba(255, 255, 255, 0.3);
   }
 
-  .prism-code::-webkit-scrollbar-thumb:hover {
+  pre.prism-code::-webkit-scrollbar-thumb:hover {
     background: rgba(255, 255, 255, 0.6);
   }
 
